--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -25,7 +25,66 @@ a {
 .content {
   max-width: 1400px;
   margin: 0 auto;
-  // height: 100vh;
-  // background-color: yellow;
   padding: 2rem;
+}
+
+// Navbar styling
+nav {
+  font-size: 2rem;
+  margin: 10px 60px;
+  padding: 10px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+  -webkit-box-align: end;
+  -ms-flex-align: end;
+  align-items: flex-end;
+  border-bottom: 2px solid #ddd;
+}
+
+nav a {
+  margin-left: 2rem;
+  color: #fff;
+  font-weight: 800;
+}
+
+nav a:hover {
+  font-weight: bold;
+  -webkit-transform: scale(1.3);
+  transform: scale(1.3);
+  color: #ffa835;
+}
+
+nav .logo {
+  margin-right: auto;
+}
+
+// Github links
+.gitLink {
+  font-weight: 600;
+  color: rgb(211, 211, 0);
+}
+
+// Global buttons
+
+.btn {
+  display: block;
+
+  color: white;
+  font-size: 1.6rem;
+  font-weight: 800;
+  text-align: center;
+
+  width: 250px;
+  padding: 8px 0;
+  margin: 3rem auto;
+  border-radius: 8px;
+  background: #ec8600;
+}
+
+.btn:hover {
+  transform: translateY(-8px);
 }
