Card list and Card details are shown

--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -29,3 +29,31 @@
   font-size: 1.6rem;
   font-weight: 900;
 }
+
+// Home - Search Input
+.searchInput {
+  // background-color: green;
+  display: flex;
+
+  align-items: center;
+  justify-content: center;
+
+  padding: 0 2rem 1rem;
+  margin: 2rem auto 0.6rem;
+
+  font-size: 2rem;
+  color: #fff;
+}
+
+.searchInputField {
+  font-size: 2rem;
+  text-indent: 14px;
+  line-height: 3rem;
+  border-radius: 12px;
+  border: none;
+  margin-left: 1.1rem;
+}
+
+.searchInputField:focus {
+  outline: none;
+}
