--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -109,6 +109,99 @@ nav .logo {
   font-weight: 900;
 }
 
+.searchInput {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0 2rem 1rem;
+  margin: 2rem auto 0.6rem;
+  font-size: 2rem;
+  color: #fff;
+}
+
+.searchInputField {
+  font-size: 2rem;
+  text-indent: 14px;
+  line-height: 3rem;
+  border-radius: 12px;
+  border: none;
+  margin-left: 1.1rem;
+}
+
+.searchInputField:focus {
+  outline: none;
+}
+
+.filmFlexContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  max-width: 100%;
+  margin: 0 auto;
+}
+
+.filmContainer {
+  background-color: #2b82f3;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: rgba(0, 0, 0, 0.8);
+  margin: 1rem;
+  padding: 1rem;
+  height: 32rem;
+  min-width: 22rem;
+}
+
+.filmContainer h1 {
+  margin-top: 1.5rem;
+}
+
+.filmContainer a {
+  color: rgba(0, 0, 0, 0.8);
+}
+
+.filmContainer a:hover {
+  font-style: italic;
+}
+
+.filmContainer .filmContent {
+  margin: 1rem auto 0.1rem;
+  font-size: 1rem;
+}
+
+.cardImageContainer {
+  max-width: 12rem;
+  margin: 0 auto;
+}
+
 .imageContainer {
   max-width: 12rem;
   margin: 0 auto;
